examples/test/testpolicy4546.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4546
  namespace: namespace187
spec:
  podSelector:
    matchLabels:
      key30: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value7
      podSelector:
        matchLabels:
          key44: value17
          key20: value17
          key19: value37
